# ComfyUI_FramePainter

./: FramePainter_node.py  README.md  __init__.py  node_utils.py  pyproject.toml  requirements.txt
modules/: sparse_control_encoder.py
modules/pipelines/: attention_processors.py  pipeline_framepainter.py  transformer_temporal.py  unet_spatio_temporal_condition_edit.py
modules/utils/: attention_utils.py
