[project]
name = "comfyui_framepainter"
description = "Official pytorch implementation of 'FramePainter: Endowing Interactive Image Editing with Video Diffusion Priors',you can use it in comfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["#accelerate==0.31.0", "#datasets==3.0.1", "#decord==0.6.0", "#deepspeed==0.15.1", "#diffusers==0.30.2", "#einops==0.8.0", "#gradio==5.13.1", "#imageio==2.35.1", "#imageio-ffmpeg==0.5.1", "#pillow==10.4.0", "safetensors", "scikit-image", "scikit-learn", "#scipy==1.14.1", "#tokenizers==0.19.1", "#torch==2.4.1", "#torchvision==0.19.1", "#transformers==4.41.1"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_FramePainter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_FramePainter"
Icon = ""
